# spotifagent

./: .dockerignore  .env.DIST  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  ROADMAP.txt  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
museflow/domain/ports/providers/: library.py
museflow/infrastructure/adapters/providers/spotify/: client.py  library.py  queries.py  schemas.py
museflow/infrastructure/config/settings/: spotify.py
spotifagent/application/services/: spotify.py
spotifagent/application/use_cases/: lastfm_get_track_recommendations.py  spotify_sync.py
spotifagent/domain/: exceptions.py
spotifagent/domain/entities/: lastfm.py  spotify.py
spotifagent/domain/ports/clients/: lastfm.py  spotify.py
spotifagent/domain/ports/repositories/: music.py
spotifagent/infrastructure/: types.py
spotifagent/infrastructure/adapters/clients/: lastfm.py  spotify.py
spotifagent/infrastructure/adapters/database/repositories/: music.py
spotifagent/infrastructure/config/: loggers.py
spotifagent/infrastructure/config/settings/: app.py  lastfm.py
spotifagent/infrastructure/entrypoints/api/: main.py
spotifagent/infrastructure/entrypoints/cli/: dependencies.py  main.py  parsers.py
spotifagent/infrastructure/entrypoints/cli/commands/spotify/: __init__.py  connect.py  sync.py
spotifagent/infrastructure/entrypoints/cli/commands/users/: __init__.py  create.py  update.py
tests/assets/httpmock/spotify/: playlist_items.json  playlists.json  saved_tracks.json
tests/assets/wiremock/spotify/__files/: playlist_items_0wKgiV47itigJyxBgFxAu1_page_1.json  playlist_items_0wKgiV47itigJyxBgFxAu1_page_2.json  playlist_items_1xnKqEZDpMWvrts4M9I9GC_page_1.json  playlist_items_1xnKqEZDpMWvrts4M9I9GC_page_2.json  search_page_1.json  search_page_2.json  search_page_3.json
tests/assets/wiremock/spotify/mappings/: get_playlist_items.json  get_playlists.json  get_saved_tracks.json  get_top_artists.json  get_top_tracks.json  search_page.json
tests/integration/: conftest.py
tests/integration/application/services/: test_spotify.py
tests/integration/application/use_cases/: test_provider_sync_library.py  test_spotify_oauth_callback.py  test_spotify_sync.py
tests/integration/factories/: base.py  music.py
tests/integration/factories/tests/: test_music.py
tests/integration/infrastructure/adapters/database/repositories/: test_music.py
tests/integration/infrastructure/adapters/providers/spotify/: test_library.py
tests/integration/infrastructure/entrypoints/api/: test_main.py
tests/integration/infrastructure/entrypoints/cli/commands/spotify/: test_connect.py  test_sync.py
tests/integration/infrastructure/entrypoints/cli/commands/users/: test_create.py  test_update.py
tests/integration/live/spotify/: test_library.py
tests/unit/: conftest.py
tests/unit/application/services/: test_spotify.py
tests/unit/application/use_cases/: test_spotify_sync.py
tests/unit/infrastructure/adapters/clients/: test_spotify.py
tests/unit/infrastructure/adapters/providers/spotify/: test_queries.py
tests/unit/infrastructure/entrypoints/cli/: test_main.py
tests/unit/infrastructure/entrypoints/cli/commands/spotify/: test_connect.py  test_sync.py
tests/unit/infrastructure/entrypoints/cli/commands/users/: test_create.py  test_update.py
